testdata/baselines/reference/submodule/conformance/logicalAssignment6(target=es2015).errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
logicalAssignment6.ts(2,37): error TS2339: Property 'push' does not exist on type '{}'.
logicalAssignment6.ts(6,37): error TS2339: Property 'push' does not exist on type '{}'.
logicalAssignment6.ts(10,5): error TS2532: Object is possibly 'undefined'.
logicalAssignment6.ts(10,37): error TS2339: Property 'push' does not exist on type '{} | undefined'.
  Property 'push' does not exist on type 'undefined'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== logicalAssignment6.ts (4 errors) ====
    function foo1(results: number[] | undefined, results1: number[] | undefined) {
        (results ||= (results1 ||= [])).push(100);
                                        ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
    }
    
    function foo2(results: number[] | undefined, results1: number[] | undefined) {
        (results ??= (results1 ??= [])).push(100);
                                        ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
    }
    
    function foo3(results: number[] | undefined, results1: number[] | undefined) {
        (results &&= (results1 &&= [])).push(100);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2532: Object is possibly 'undefined'.
                                        ~~~~
!!! error TS2339: Property 'push' does not exist on type '{} | undefined'.
!!! error TS2339:   Property 'push' does not exist on type 'undefined'.
    }
    